Update side messages

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
           <ul>
             <li>HTML5 and SEO</li>
             <li>SASS</li>
+            <li>jQuery</li>
           </ul>
         </li>
         <li>Javascript
           <ul>
-            <li>jQuery</li>
             <li>ES2015</li>
             <li>Babel -- I don't what to do without this guy</li>
           </ul>
@@ -125,15 +125,16 @@
         </li>
         <li>Libraries and frameworks
           <ul>
-            <li>Backbone JS and Underscore</li>
-            <li>Ember JS 2.0</li>
+            <li>Backbone JS and Underscore -- Instant win</li>
+            <li>Ember JS 2.0 -- Team Instict, if you know what i mean</li>
             <li>Angular JS 1.0 -- Basic stuff</li>
             <li>React JS -- Learning (20%)</li>
           </ul>
         </li>
         <li>Dependencies manager:
           <ul>
-            <li>npm and bower</li>
+            <li>npm -- Migrating all to npm</li>
+            <li>bower</li>
           </ul>
         </li>
         <li>Building tools
@@ -146,16 +147,16 @@
         <li>Testing
           <ul>
             <li>Mocha and Chai -- Unit Testing</li>
-            <li>Sinon JS -- Spies</li>
+            <li>Sinon JS -- Spies and fake AJAX calls</li>
             <li>Karma and Phantom JS -- Integration Testing</li>
-            <li>Jasimne -- Yes, but rarely used</li>
+            <li>Jasimne -- Yes, but I prefer combination above</li>
           </ul>
         </li>
       </ul>
       <h3 class="section__subtitle">Middleware</h3>
       <ul>
-        <li>Node JS</li>
-        <li>Express JS</li>
+        <li>Node JS -- This guy is a whole new world</li>
+        <li>Express JS -- Small but powerful</li>
         <li>MongoDB</li>
       </ul>
       <h3 class="section__subtitle">Backend</h3>
