--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gustavo Morales - Web Developer</title>
   <meta name="description" content="Engineer in Computer Science, Web Developer, Undergraduate and Graduate Professor and Apple Fan">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.css">
 </head>
 
@@ -38,8 +38,8 @@
         </li>
         <li><strong>Reading</strong> The Art of War - Sun Tzu (20%)
         </li>
-        <li><strong>Listening</strong> Stuck in Rock from 2000s and classic rock from 90s and 80s</li>
-        <li><strong>Watching</strong> Game Of Thrones -- Of course like another mortal in this world (Season 6)
+        <li><strong>Listening</strong> Rock from 2000s and classic rock from 90s and 80s</li>
+        <li><strong>Watching</strong> Game Of Thrones -- Of course like another mortal in this world (Season 6 completed)
         </li>
         <li><strong>Playing</strong> Civilization V -- Waiting for the Civilization VI and Final Fantasy XV
         </li>
@@ -106,84 +106,85 @@
       <ul>
         <li>Basic
           <ul>
-            <li>HTML5 and SEO</li>
+            <li>HTML5</li>
             <li>SASS</li>
             <li>jQuery</li>
           </ul>
         </li>
         <li>Javascript
           <ul>
-            <li>ES2015</li>
-            <li>Babel -- I don't what to do without this guy</li>
+            <li>ES5 and ES2015</li>
+            <li>Babel <span class="comment">-- I don't know what to do without this guy</span></li>
           </ul>
         </li>
         <li>FrontEnd Frameworks
           <ul>
-            <li>Foundation -- Preferred</li>
-            <li>Bootstrap -- More propular</li>
+            <li>Foundation <span class="comment">-- Nice and clean</span></li>
+            <li>Bootstrap <span class="comment">-- More propular</span></li>
           </ul>
         </li>
-        <li>Libraries and frameworks
+        <li>Libraries and frameworks <span class="comment">-- If you have good bases of JavaScript you can adpot one of this guys very quickly</span>
           <ul>
-            <li>Backbone JS and Underscore -- Instant win</li>
-            <li>Ember JS 2.0 -- Team Instict, if you know what i mean</li>
-            <li>Angular JS 1.0 -- Basic stuff</li>
-            <li>React JS -- Learning (20%)</li>
+            <li>Backbone JS and Underscore <span class="comment">-- Instant win</span></li>
+            <li>Ember JS <span class="comment">-- I want to be honest, don't like</span></li>
+            <li>Angular JS (1.0) <span class="comment">-- Only basic stuff</span></li>
+            <li>React JS <span class="comment">-- Learning (20%)</span></li>
           </ul>
         </li>
         <li>Dependencies manager:
           <ul>
-            <li>npm -- Migrating all to npm</li>
+            <li>npm <span class="comment">-- Preferred</span></li>
             <li>bower</li>
           </ul>
         </li>
         <li>Building tools
           <ul>
-            <li>npm and Webpack -- Yes, check out this <a href="https://github.com/gmoralesc/boilerplate-npm-webpack" target="_blank">repo</a></li>
-            <li>Gulp</li>
-            <li>Grunt (Rarely used)</li>
+            <li>npm and Webpack <span class="comment">-- Yes, check out this <a href="https://github.com/gmoralesc/boilerplate-npm-webpack" target="_blank">repo</a></span></li>
+            <li>Gulp <span class="comment">-- Simple and helpful</span></li>
+            <li>Grunt <span class="comment">-- Rarely used</span></li>
           </ul>
         </li>
         <li>Testing
           <ul>
-            <li>Mocha and Chai -- Unit Testing</li>
-            <li>Sinon JS -- Spies and fake AJAX calls</li>
-            <li>Karma and Phantom JS -- Integration Testing</li>
-            <li>Jasimne -- Yes, but I prefer combination above</li>
+            <li>Mocha and Chai <span class="comment">-- Unit Testing</span></li>
+            <li>Sinon JS <span class="comment">-- Add spies and fake AJAX calls</span></li>
+            <li>Jasimne <span class="comment">-- Yes, but I prefer combination above</span></li>
+            <li>Karma and Phantom JS <span class="comment">-- Integration Testing</span></li>
           </ul>
         </li>
       </ul>
       <h3 class="section__subtitle">Middleware</h3>
       <ul>
-        <li>Node JS -- This guy is a whole new world</li>
-        <li>Express JS -- Small but powerful</li>
-        <li>MongoDB</li>
+        <li>Node JS <span class="comment">-- This guy is a whole new world</span></li>
+        <li>Express JS <span class="comment">-- Small but powerful</span></li>
+        <li>MongoDB <span class="comment">-- Basic use</span></li>
       </ul>
       <h3 class="section__subtitle">Backend</h3>
       <ul>
-        <li>PHP -- Yes, I worked a lot of years with it
+        <li>PHP <span class="comment">-- Yes, I worked a lot of years with it</span>
           <ul>
-            <li>Apache and MySQL with PHP old schools coding -- Check out this <a href="https://github.com/gmoralesc/timetracker" target="_blank">repo</a></li>
-            <li>Laravel -- My respects over other frameworks in PHP, basic stuff</li>
+            <li>Apache and MySQL with PHP old schools coding <span class="comment">-- Check out this <a href="https://github.com/gmoralesc/timetracker" target="_blank">repo</a></span></li>
+            <li>Laravel <span class="comment">-- My respects over other frameworks in PHP, basic stuff</span></li>
             <li>Some Joomla and Wordpress works</li>
           </ul>
         </li>
-        <li>Ruby on Rails -- Of course, first met Ruby and later Rails, bye PHP
+        <li>Ruby on Rails <span class="comment">-- Of course, first met Ruby and later Rails, bye PHP</span>
           <ul>
-            <li>Fullstack with PostgreSQL -- check out this <a href="https://github.com/gmoralesc/photobook/" target="_blank">repo</a></li>
-            <li>BDD with RSpec, Factory Girl, Faker, Capybara and Cucumber -- check out this <a href="https://github.com/gmoralesc/photobook/wiki/Validations-and-BDD" target="_blank">wiki page</a></li>
+            <li>Fullstack with PostgreSQL <span class="comment">-- check out this <a href="https://github.com/gmoralesc/photobook/" target="_blank">repo</a></span></li>
+            <li>BDD with RSpec, Factory Girl, Faker, Capybara and Cucumber <span class="comment">-- check out this <a href="https://github.com/gmoralesc/photobook/wiki/Validations-and-BDD" target="_blank">wiki page</a></span></li>
           </ul>
         </li>
       </ul>
       <h3 class="section__subtitle">Tools and platforms</h3>
       <ul>
-        <li>Git and Github -- I love command line with ZSH</li>
-        <li>Vagrant and VirtualBox -- Pending to learn Docker</li>
-        <li>Heroku -- Easy to use</li>
-        <li>Travis CI -- Very nice and simple</li>
+        <li>Git and Github <span class="comment">-- I love command line with ZSH</span></li>
+        <li>Vagrant and VirtualBox <span class="comment">-- Pending to learn Docker</span></li>
+        <li>Heroku <span class="comment">-- Easy to use</span></li>
+        <li>Travis CI <span class="comment">-- Very nice and simple</span></li>
       </ul>
       <h3 class="section__subtitle">Methodolgies</h3>
       <ul>
+        <li>Basic CEO</li>
         <li>BEM Notation</li>
         <li>TDD and BDD</li>
         <li>SCRUM</li>
