--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
         <li><strong>Playing</strong> Civilization V -- Waiting for the Civilization VI and Final Fantasy XV
         </li>
-        <li><strong>Personal projects</strong> Look at my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
+        <li><strong>Personal projects</strong> <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog (npm library)</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
         </li>
       </ul>
     </section>
