--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
         <li><strong>Playing</strong> Civilization V -- Waiting for the Civilization VI and Final Fantasy XV
         </li>
-        <li><strong>Personal projects</strong> <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog (npm library)</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
+        <li><strong>Personal projects</strong> <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
         </li>
       </ul>
     </section>
@@ -123,10 +123,10 @@
             <li>Bootstrap <span class="comment">-- More propular</span></li>
           </ul>
         </li>
-        <li>Libraries and frameworks <span class="comment">-- If you have good bases of JavaScript you can adpot one of this guys very quickly</span>
+        <li>Libraries and frameworks <span class="comment">-- If you have good bases of JavaScript you can adopt one of this guys very quickly</span>
           <ul>
             <li>Backbone JS and Underscore <span class="comment">-- Instant win</span></li>
-            <li>Ember JS <span class="comment">-- I want to be honest, don't like</span></li>
+            <li>Ember JS <span class="comment">-- I want to be honest, don't like, but the CLI is very nice like Rails</span></li>
             <li>Angular JS (1.0) <span class="comment">-- Only basic stuff</span></li>
             <li>React JS <span class="comment">-- Learning (20%)</span></li>
           </ul>
