--- a/index.html
+++ b/index.html
@@ -125,10 +125,11 @@
         </li>
         <li>Libraries and frameworks <span class="comment">-- If you have good bases of JavaScript you can adopt one of this guys very quickly</span>
           <ul>
-            <li>Backbone JS and Underscore <span class="comment">-- Instant win</span></li>
-            <li>Ember JS <span class="comment">-- I want to be honest, don't like, but the CLI is very nice like Rails</span></li>
+            <li>Backbone JS and Loadash <span class="comment">-- Instant win<br> What happened with Underscore? Yes, also used but here is a <a href="http://stackoverflow.com/questions/13789618/differences-between-lodash-and-underscore#answer-13898916" target="_blank">cool response for that question</a></span></li>
+            <li>Ember JS<span class="comment"> -- I want to be honest, don't like, but the CLI is very nice like Rails</span></li>
             <li>Angular JS (1.0) <span class="comment">-- Only basic stuff</span></li>
-            <li>React JS <span class="comment">-- Learning (20%)</span></li>
+            <li>Handlebars JS <span class="comment">-- Very nice</span></li>
+            <li><span class="comment">React JS -- Learning (20%)</span></li>
           </ul>
         </li>
         <li>Dependencies manager:
