Add Airbnb Style Guides

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <li>Basic
           <ul>
             <li>HTML5</li>
-            <li>SASS</li>
+            <li>SASS <span class="comment">-- <a href="https://github.com/airbnb/css" target="_blank">Airbnb CSS / SASS Style Guide</a></span></li>
             <li>jQuery</li>
           </ul>
         </li>
-        <li>Javascript
+        <li>Javascript <span class="comment">-- <a href="https://github.com/airbnb/javascript" target="_blank">Airbnb JavaScript Style Guide</a></span>
           <ul>
             <li>ES5 and ES2015</li>
             <li>Babel <span class="comment">-- I don't know what to do without this guy</span></li>
@@ -129,7 +129,7 @@
             <li>Ember JS<span class="comment"> -- I want to be honest, don't like, but the CLI is very nice like Rails</span></li>
             <li>Angular JS (1.0) <span class="comment">-- Only basic stuff</span></li>
             <li>Handlebars JS <span class="comment">-- Very nice</span></li>
-            <li><span class="comment">React JS -- Learning (20%)</span></li>
+            <li><span class="comment">React JS -- Learning (20%). <a href="https://github.com/airbnb/javascript/tree/master/react" target="_blank">Airbnb React/JSX Style Guide</a></span></li>
           </ul>
         </li>
         <li>Dependencies manager:
@@ -171,6 +171,7 @@
         </li>
         <li>Ruby on Rails <span class="comment">-- Of course, first met Ruby and later Rails, bye PHP</span>
           <ul>
+            <li>Ruby <span class="comment"> -- basic, only necessary to work with Rails. <a href="https://github.com/airbnb/ruby">Airbnb Ruby Style Guide</a></span></li>
             <li>Fullstack with PostgreSQL <span class="comment">-- check out this <a href="https://github.com/gmoralesc/photobook/" target="_blank">repo</a></span></li>
             <li>BDD with RSpec, Factory Girl, Faker, Capybara and Cucumber <span class="comment">-- check out this <a href="https://github.com/gmoralesc/photobook/wiki/Validations-and-BDD" target="_blank">wiki page</a></span></li>
           </ul>
