Update filter text

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
       <h2 class="section__title">Technologies</h2>
       <label for="filter">Filter:</label>
       <select onchange="filter_tecnologies()" id="filter">
-        <option value="0">Technologies that I worked so far</option>
-        <option value="1">Technologies that I want to work</option>
-        <option value="2">Technologies that I want to deprecated</option>
+        <option value="0">Technologies that I have worked so far</option>
+        <option value="1">Technologies that I would want to work</option>
+        <option value="2">Technologies that I want to deprecate</option>
       </select>
       <h3 class="section__subtitle">Front End</h3>
       <ul>
