Update technologies and comments

--- a/index.html
+++ b/index.html
@@ -149,8 +149,11 @@
             <li data-stage="0 1">Loadash
               <span class="comment" data-stage="1">-- Yes, now I prefer Lodash here is a <a href="http://stackoverflow.com/questions/13789618/differences-between-lodash-and-underscore#answer-13898916" target="_blank">cool response for that</a></span>
             </li>
-            <li data-stage="0 1">Backbone
+            <li data-stage="0 1">Backbone JS
               <span class="comment" data-stage="0 1">-- Instant win</span>
+            </li>
+            <li data-stage="0 1">Ampersand JS
+              <span class="comment" data-stage="0">-- Pending</span>
             </li>
             <li data-stage="0 2">Ember JS
               <span class="comment hidden" data-stage="2"> -- I want to be honest, don't like, but the CLI is very nice like Rails</span>
@@ -162,8 +165,8 @@
             <li data-stage="0 1">Handlebars JS
               <span class="comment" data-stage="0 1">-- Very nice</span>
             </li>
-            <li data-stage="0 1">
-              <span class="comment" data-stage="0 1">React JS -- Learning (20%). <a href="https://github.com/airbnb/javascript/tree/master/react" target="_blank">Airbnb React/JSX Style Guide</a></span>
+            <li data-stage="0 1">React JS
+              <span class="comment" data-stage="0 1">-- Learning (30%) - Setup and basic app. <a href="https://github.com/airbnb/javascript/tree/master/react" target="_blank">Airbnb React/JSX Style Guide</a></span>
             </li>
           </ul>
         </li>
@@ -210,6 +213,9 @@
         <li data-stage="0 1">Node JS
           <span class="comment" data-stage="0 1">-- This guy is a whole new world</span>
         </li>
+        <li data-stage="0 1">Pug
+          <span class="comment" data-stage="0 1">-- Nice template engine</span>
+        </li>
         <li data-stage="0 1">Express JS
           <span class="comment" data-stage="0 1">-- Small but powerful</span>
         </li>
@@ -249,7 +255,9 @@
       </ul>
       <h3 class="section__subtitle" data-stage="0 1">Tools and platforms</h3>
       <ul>
+        <li data-stage="0 1">Postman <span class="comment" data-stage="0 1">-- Great tool</span></li>
         <li data-stage="0 1">Git and Github <span class="comment">-- I love command line with ZSH</span></li>
+        <li data-stage="0 1">Git Commitezen <span class="comment" data-stage="0 1">-- Standard commit output</span></li>
         <li data-stage="0">Vagrant and VirtualBox <span class="comment">-- Pending to learn Docker</span></li>
         <li data-stage="0 1">Heroku <span class="comment">-- Easy to use</span></li>
         <li data-stage="0 1">Travis CI <span class="comment">-- Very nice and simple</span></li>
