--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
       <p>Husband, Father, Self learner and Apple Fan
         <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en" target="_blank">Barranquilla, Colombia</a></p>
       <p>Engineer in Computer Science, Web Developer, Undergraduate and Graduate Professor</p>
-      <p><a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
+      <p>
+        <a href="http://gmoralesc.me">gmoralesc.me</a>
+        <br>
+        <a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
         <br>
         <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
         <br>
-        <a href="http://github.com/gmoralesc" target="_blank">Github</a></p>
+        <a href="http://github.com/gmoralesc" target="_blank">Github</a>
+      </p>
     </section>
   </header>
   <section class="content">
@@ -74,8 +78,8 @@
         <li><strong>Senior Front End Web Developer</strong>
           <br>
           <a href="https://koombea.com/" target="_blank">Koombea</a></li>
-        <li><strong>Engineer in technology for Education</strong>
-          <br>
+        <li><strong>Engineer in technology for Education</strong><br>
+          Blackboard Content Creator<br>
           <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a></li>
       </ul>
     </section>
