Update Github link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br>
         <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
         <br>
-        <a href="http://github.com/gmoralesc" target="_blank">Github</a>
+        <a href="http://github.com/gmoralesc" target="_blank">github.com/gmoralesc</a>
       </p>
     </section>
   </header>
