--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h2 class="card__subtitle">About me</h2>
       <p>Husband, Father, Self learner and Apple Fan
         <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en" target="_blank">Barranquilla, Colombia</a></p>
-      <p>Engineer in Computer Science, Web Developer, Undergraduate and Graduate Professor</p>
+      <p>Engineer in Computer Science, FullStack Web Developer, Undergraduate and Graduate Professor</p>
       <p>
         <a href="http://gmoralesc.me">gmoralesc.me</a>
         <br>
@@ -35,19 +35,16 @@
     <section class="section">
       <h2 class="section__title">What I am doing</h2>
       <ul>
-        <li><strong>Working</strong> at <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun and learning new things everyday with a great team</li>
-        <li><strong>Learning</strong> React JS -- JSX I can’t accept you … yet (20%)
+        <li><strong>Working</strong>: at <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Senior Front End Web Developer -- So much fun and learning new things everyday with a great team</li>
+        <li><strong>Learning</strong>: React JS -- JSX I can’t accept you … yet (40%)
         </li>
-        <li><strong>Writing</strong> <a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a> -- Why not?, the best way to learn is sharing what you have in your mind. (10%) and also checkout this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a> -- Oldy but good
+        <li><strong>Writing</strong>: <a href="https://www.gitbook.com/book/gmoralesc/introduccion-a-ruby-on-rails/details" target="_blank">Introducción a Ruby on Rails</a> -- Why not?, the best way to learn is sharing what you have in your mind. (10%) and also checkout this playlist about <a href="https://www.youtube.com/playlist?list=PLVkJMXNbOF6SV4iBfCvlZ61EvLzLeB5xV" target="blank">Ruby on Rails (3.2) - Micropost App</a> -- Oldy but good
         </li>
-        <li><strong>Reading</strong> The Art of War - Sun Tzu (20%)
+        <li><strong>Watching</strong>: Game Of Thrones -- Of course like another mortal in this world (Season 6 completed)
         </li>
-        <li><strong>Listening</strong> Rock from 2000s and classic rock from 90s and 80s</li>
-        <li><strong>Watching</strong> Game Of Thrones -- Of course like another mortal in this world (Season 6 completed)
+        <li><strong>Playing</strong>: Civilization V and Civilization VI -- Waiting for Final Fantasy XV
         </li>
-        <li><strong>Playing</strong> Civilization V -- Waiting for the Civilization VI and Final Fantasy XV
-        </li>
-        <li><strong>Personal projects</strong> <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
+        <li><strong>Personal projects</strong>: <a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a> and check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a>
         </li>
       </ul>
     </section>
